# INF1060

./: CMakeLists.txt  README.md  fork.txt  stack.c  tcp.c
client/: client.c  client.h  main  main.c  main.c~  main_cpy.c  pipe  pipe.c  pipe.c~  queue.c  queue.h  stack.c  stack.h  tcp.c  tcp.h
include/: messages.c  messages.h  stack.h  tcp.h
server/: main.c  server.c  server.h  tcp.c  tcp.h
server/jobfiles/: alice.job  alice.txt  alice_short.job  corrupt.job  genjob  genjob.c  huckleberry.job  huckleberry_short.job  metamorphosis.job  metamorphosis_short.job  pride_and_prejudice.job  pride_and_prejudice_short.job
